# vtk-clip-evaluation

./: Dockerfile  README.md
clip-m-par/: CMakeLists.txt  deactivate-conversion-fromvtk.patch  main.cxx
clip-par/: CMakeLists.txt  configurable-batch-size.patch  main.cxx  pass-time.patch  remove-trimming.patch  test-various-batchSizes.patch
clip-seq/: CMakeLists.txt  main.cxx
vtkm-par-clip/: CMakeLists.txt  main.cxx
